--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,10 +9,12 @@ importFrom(ggplot2,element_text)
 importFrom(ggplot2,geom_bar)
 importFrom(ggplot2,geom_errorbar)
 importFrom(ggplot2,ggplot)
+importFrom(ggplot2,ggsave)
 importFrom(ggplot2,ggtitle)
 importFrom(ggplot2,position_dodge)
-importFrom(ggplot2,scale_fill_hue)
+importFrom(ggplot2,scale_fill_manual)
 importFrom(ggplot2,theme)
+importFrom(ggplot2,theme_minimal)
 importFrom(ggplot2,xlab)
 importFrom(ggplot2,ylab)
 importFrom(grDevices,dev.copy)
@@ -29,7 +31,6 @@ importFrom(graphics,text)
 importFrom(graphics,title)
 importFrom(methods,new)
 importFrom(readxl,read_excel)
-importFrom(rlang,.data)
 importFrom(stats,median)
 importFrom(stats,sd)
 importFrom(tools,file_ext)
