removal of source, coding lapply

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,9 @@ export(load_MACSQuant)
 export(new_class_MQ)
 export(on_plate_selection)
 export(pipeline)
+export(rData)
+export(setPath)
+export(sorted)
 exportClasses(MACSQuant)
 import(prettydoc)
 importFrom(ggplot2,aes)
