--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,12 +2,12 @@ Package: MACSQuantifyR
 Type: Package
 Title: Fast treatment of MACSQuantify FACS data
 Date: 08/10/2019
-Version: 1.0.0
+Version: 1.0.1
 Author: Raphaël Bonnet [aut, cre], Marielle Nebout [dtc],Giulia Biondani [dtc], Jean-François Peyron[aut,ths], Inserm [fnd]
 Maintainer: Raphaël Bonnet <raphael.bonnet@univ-cotedazur.fr>
 Description: Automatically process the metadata of MACSQuantify FACS sorter. 
     It runs multiple modules: i) imports of raw file and graphical selection of duplicates in well plate, 
-    ii) computates statistics on data and iii) can compute combination index.
+    ii) computes statistics on data and iii) can compute combination index.
 Imports: readxl,
         graphics,
         tools,
@@ -35,7 +35,7 @@ biocViews: DataImport,
 License: Artistic-2.0
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.1.1
+RoxygenNote: 7.1.0
 Suggests: 
     knitr,
     testthat,
